# iam_copilot_matan

./: .gitignore  README.md  create_db.py  create_db_new_location.py  design.md  non_streaming_cli.py  notebook.ipynb  pyproject.toml  query_examples.sql  requirements.txt  run_copilot.py  run_server.py  setup.py  simple_cli.py  talk_fetch_db.py  test_comprehensive.py  test_conversation.py  test_conversation_history.py  test_query.py  test_streaming.py
data/: mock_data.json
iam_agent/: Iam_copilot.py  cli.py  config.py  iam_query.py  models.py  server.py  state.py
iam_agent/db/: __init__.py  create_db_risk_view.py  loader.py  risk_view.py
iam_agent/llm_context/: db_schema.py  prompt.py
src/: Iam_copilot.py  agent_eval.py  create_db_risk_view.py  debug.py  generate_graph.py  guidelines.py  iam_data_snapshot.py  iam_query.py  json_file_loader.py  loader.py  process_query.ipynb  prompt.py  query_graph.py  risk_topics.py  risk_view.py  snapshot.py  state.py  talk_fetch_db.py  test_db.py  test_query_writer.py  test_runner.py  test_tools.py
src/db/: risk_view.py  snapshot.py
src/llm_context/: guidelines.py  prompt.py
src/nodes/: query_writer.py
test_data/: test_cases.json
tests/: e2e_query_test.py  test_db.py  test_risk_pipeline.py  test_search_detection.py  test_sql_extraction.py
util/: create_db.py  create_test_db.py  debug.py  risk_utils.py  sql_parser.py  test_db.py
