[tool.poetry]
name = "iam_agent"
version = "0.1.0"
description = "CLI and Server for IAM Copilot Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
repository = "https://github.com/yourusername/iam_agent"
packages = [{include = "iam_agent"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.104.0"
uvicorn = ">=0.23.2"
rich = ">=13.7.0"
prompt_toolkit = ">=3.0.41"
httpx = ">=0.25.0"
typer = ">=0.9.0"
langchain = "0.3.23"
langchain-core = "0.3.52"
langchain-community = "0.3.21"
langgraph = "0.3.30"
langgraph-checkpoint = ">=2.0.24"
langchain-ollama = "0.3.2"
tiktoken = "0.9.0"
sqlglot = "26.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"

[tool.poetry.scripts]
iam-cli = "iam_agent.cli:main"
iam-server = "iam_agent.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 